# ctf-notify

./: .gitignore  API.md  Dockerfile.nginx  Dockerfile.uwsgi  README.md  docker-compose.yaml  nginx.conf
backend/: Cargo.toml  README.md  api.py  cleanup.py  db.py  models.py  push.py  requirements.txt  server.py
backend/src/: api.rs  config.rs  main.rs  pusher.rs
frontend/: package.json
frontend/public/: index.html  sw.js
frontend/src/: App.js  Current.css  Current.js  Notif.js  index.css  index.js  utils.js
