[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["tower-log", "http1", "tokio", "json"] }
axum-sessions = "0.5.0"
log = "0.4.18"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
toml = { version = "0.7.4", features = ["parse"] }
uuid = { version = "1.3.3", features = ["fast-rng", "v4"] }
